[package]
name = "nine-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
directories = "5.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"

[lib]
name = "nine_cron"
path = "lib.rs"

[[bin]]
name = "nine-cron"
path = "main.rs"
